# jcuda-main

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  USAGE.md  pom.xml
resources/: README.md
resources/readme/: README.txt
